kubernetes/backend-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: wishlist-backend
    name: wishlist-backend
  name: wishlist-backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wishlist-backend
        name: wishlist-backend
    spec:
      imagePullSecrets:
      - name: registry.gitlab.com
      containers:
      - name: wishlist-backend
        image: registry.gitlab.com/rubengeertsema/wishlist-srv:latest
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
