kubernetes/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-backend
  labels:
    app: wishlist-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: wishlist-backend
  type: NodePort
